[#148]: Added new changes according old workflow to new changes in integration restructure branch.